[package]
name = "liclient"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14", features = ["full"] }
hyper-tls = "0.5"
http = "0.2.8"

serde = "1.0"
serde_json = "1.0"

tokio = { version = "1", features = ["full"] }
async_stream = "0.3"

chessboard = { git = "https://github.com/kyllingene/chessboard" }