[package]
name = "liclient"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["stream"] }
futures-util = "0.3"

async-stream = "0.3"

serde = "1.0"
serde_json = "1.0"
bytes = "^1.0"

chessboard = { git = "https://github.com/kyllingene/chessboard" }