[package]
name = "liclient"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["stream"] }
futures = "0.3"
futures-util = "0.3"

tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
tokio-stream = { version = "0.1", features = ["io-util"]}

serde = "1.0"
serde_json = "1.0"

chessboard = { git = "https://github.com/kyllingene/chessboard" }